// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/actionsList can be rendered with array of actions typed as shapes 1`] = `
<div
  className="mrb-sublist"
>
  <div
    className="mrb-subheader"
  >
    <i
      className="mrb-subheader-right material-icons"
      disabled={false}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      keyboard_arrow_up
    </i>
    <div>
      foo
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <ul
      className="mdc-list"
      style={
        Object {
          "maxHeight": "26vh",
          "overflow": "auto",
        }
      }
    >
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
    </ul>
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "color": "rgb(0, 0, 0)",
          "height": "100%",
          "minHeight": "40px",
          "padding": "0px 16px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can be rendered with array of actions typed as strings 1`] = `
<div
  className="mrb-sublist"
>
  <div
    className="mrb-subheader"
  >
    <i
      className="mrb-subheader-right material-icons"
      disabled={false}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      keyboard_arrow_up
    </i>
    <div>
      foo
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <ul
      className="mdc-list"
      style={
        Object {
          "maxHeight": "26vh",
          "overflow": "auto",
        }
      }
    >
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              any
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              output_var
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              variable
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              br
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              button
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              trash
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "0px 16px",
          }
        }
      >
        <i
          aria-hidden="true"
          className="mdc-list-item__graphic material-icons"
        >
          chat_bubble_outline
        </i>
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              bar
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
    </ul>
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "color": "rgb(0, 0, 0)",
          "height": "100%",
          "minHeight": "40px",
          "padding": "0px 16px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have an unique id 1`] = `
<div
  className="mrb-sublist"
>
  <div
    className="mrb-subheader"
  >
    <i
      className="mrb-subheader-right material-icons"
      disabled={false}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      keyboard_arrow_up
    </i>
    <div>
      foobar
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "color": "rgb(0, 0, 0)",
          "height": "100%",
          "minHeight": "40px",
          "padding": "0px 16px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have different behavior on action 1`] = `
<div
  className="mrb-sublist"
>
  <div
    className="mrb-subheader"
  >
    <i
      className="mrb-subheader-right material-icons"
      disabled={false}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      keyboard_arrow_up
    </i>
    <div>
      foobar
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "color": "rgb(0, 0, 0)",
          "height": "100%",
          "minHeight": "40px",
          "padding": "0px 16px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have different behavior on drop 1`] = `
<div
  className="mrb-sublist"
>
  <div
    className="mrb-subheader"
  >
    <i
      className="mrb-subheader-right material-icons"
      disabled={false}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      keyboard_arrow_up
    </i>
    <div>
      foobar
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "color": "rgb(0, 0, 0)",
          "height": "100%",
          "minHeight": "40px",
          "padding": "0px 16px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have different behavior on edit 1`] = `
<div
  className="mrb-sublist"
>
  <div
    className="mrb-subheader"
  >
    <i
      className="mrb-subheader-right material-icons"
      disabled={false}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      keyboard_arrow_up
    </i>
    <div>
      foobar
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "color": "rgb(0, 0, 0)",
          "height": "100%",
          "minHeight": "40px",
          "padding": "0px 16px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have different behavior on select 1`] = `
<div
  className="mrb-sublist"
>
  <div
    className="mrb-subheader"
  >
    <i
      className="mrb-subheader-right material-icons"
      disabled={false}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      keyboard_arrow_up
    </i>
    <div>
      foobar
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "color": "rgb(0, 0, 0)",
          "height": "100%",
          "minHeight": "40px",
          "padding": "0px 16px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList renders correctly 1`] = `
<div
  className="mrb-sublist"
>
  <div
    className="mrb-subheader"
  >
    <i
      className="mrb-subheader-right material-icons"
      disabled={false}
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex="0"
    >
      keyboard_arrow_up
    </i>
    <div>
      foobar
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "color": "rgb(0, 0, 0)",
          "height": "100%",
          "minHeight": "40px",
          "padding": "0px 16px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;
